--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ h1, h2 {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     justify-content: space-between;
+    position: relative;
 }
 
 .produto-card img {
@@ -70,6 +71,21 @@ h1, h2 {
     font-weight: bold;
     font-size: 16px;
     color: #007bff;
+}
+
+.quantidade-selecao {
+    width: 50px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+#total-compra {
+    font-size: 18px;
+    font-weight: bold;
+    color: #d9534f;
+    margin-top: 10px;
 }
 
 /* Botão de Copiar PIX */
